--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,13 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 
+# Visual Studio workspace
+.vs/
+
+# Carpetas de compilación
+bin/
+obj/
+
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
 
