--- a/PortafolioIA/Application/Application.csproj
+++ b/PortafolioIA/Application/Application.csproj
@@ -7,8 +7,11 @@
 
   <ItemGroup>
     <Folder Include="Commands\" />
-    <Folder Include="Dto\" />
     <Folder Include="Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
   <PropertyGroup>
