se implementa ProcessFileEndpoint

--- a/PortafolioIA/Api/appsettings.json
+++ b/PortafolioIA/Api/appsettings.json
@@ -2,11 +2,21 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SupaBasePostgres": "Host=tu-supabase-host;Port=5432;Database=postgres;Username=postgres;Password=TU_PASS"
+    "SupaBasePostgres": "Host=db.onznuemseromckhhrfmx.supabase.co;Database=postgres;Username=postgres;SSL Mode=Require;Trust Server Certificate=true"
+    //"SupaBasePostgres": "Host=db.onznuemseromckhhrfmx.supabase.co;Database=postgres;Username=postgres;SSL Mode=Disalble;Password=PASS" //para migracion
+    //dotnet ef migrations add InitialCreate --project Infrastructure --startup-project Api
+    //dotnet ef database update --project Infrastructure --startup-project Api
+  },
+  "Database": {
+    "Password": "" //secret
+  },
+  "Cors": {
+    "AllowedOrigins": [ "http://localhost:4200", "https://localhost:4200" ]
   }
 }
